--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,2 +1,80 @@
 .header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 20;
+
+    @media (min-width: $media-lg) {
+        top: 57px;
+    }
+    &__inner {
+        position: absolute;
+        inset: 0;
+        z-index: 20;
+
+        font-family: $family-title;
+        font-size: 2rem;
+        font-weight: $fw-bold;
+        color: $colors-primary;
+
+        @media (min-width: $media-md) {
+            position: static;
+        }
+    }
+
+    &__content {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        background-color: $colors-secondary;
+
+        transform: translateY(-100%);
+
+        transition: transform 0.3s ease-in-out;
+
+        @media (min-width: $media-md) {
+            min-height: auto;
+
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+
+            background-color: transparent;
+
+            transform: translateY(0);
+        }
+    }
+
+    &__logo svg path {
+        transition: fill 0.3s ease-in-out;
+    }
+
+    &__logo:hover svg path {
+        fill: $colors-additional;
+    }
+
+    &__tel {
+        white-space: nowrap;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    &__logo,
+    &__btn {
+        margin-right: 0;
+        margin-bottom: 4rem;
+    }
+
+    @media (min-width: $media-md) {
+        &__logo,
+        &__btn {
+            margin-bottom: 0;
+            margin-right: 9.6rem;
+        }
+    }
 }
