--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,10 +13,41 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    position: relative;
+    font-family: $family-main;
+    font-size: $fs-md;
+}
+
+.container {
+    width: 100%;
+    max-width: 1230px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
 
 // components
 @import 'components/header.scss';
 @import 'components/footer.scss';
+@import 'components/intro.scss';
+@import 'components/section.scss';
+@import 'components/btn.scss';
+@import 'components/burger.scss';
