--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,3 +1,24 @@
 // colors
+$colors-primary: #262c27;
+$colors-secondary: #fff;
+$colors-additional: #0093a1;
+$colors-highlight: #b9c400;
+
+// Typography
+$family-main: 'Inter', sans-serif;
+$family-title: 'Comfortaa', cursive;
+
+$fs-md: 1.8rem;
+$fs-lg: 6rem;
+
+$fw-light: 300;
+$fw-normal: 400;
+$fw-bold: 700;
+$fw-extra-bold: 900;
 
 // media
+$media-sm: 576px;
+$media-md: 768px;
+$media-lg: 992px;
+$media-xl: 1200px;
+$media-xxl: 1400px;
