--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -1,4 +1,140 @@
 .section {
-    &--intro {
+    &--info {
+        position: relative;
+        background: url('../../img/info/info-bg.jpg') no-repeat 30% 50% / cover;
+        min-height: 100vh;
+
+        padding-top: 180px;
+
+        @media (min-width: $media-md) {
+            background-position: center;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 90px;
+            left: 0;
+            right: 0;
+
+            z-index: 1;
+
+            height: 180px;
+            background-color: $colors-primary;
+
+            transform: translateY(-180px);
+        }
+
+        .info__top {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
+            gap: 8rem;
+
+            margin-bottom: 65vh;
+
+            @media (min-width: $media-md) {
+                flex-direction: row;
+                align-items: flex-end;
+            }
+        }
+
+        .info__top-text {
+            position: relative;
+
+            padding-bottom: 3rem;
+            margin: 0;
+            max-width: 290px;
+
+            height: 380px;
+
+            color: $colors-secondary;
+            line-height: 2.2rem;
+
+            &--one {
+                padding-bottom: 144px;
+            }
+
+            &--two {
+                border-bottom: 1px solid $colors-secondary;
+            }
+        }
+
+        .btn--play {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
+
+        .info__top-img {
+            position: relative;
+            z-index: 6;
+        }
+
+        .info__specs {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: flex-start;
+            gap: 162px;
+
+            @media (min-width: $media-lg) {
+                flex-direction: row;
+            }
+        }
+
+        .info__specs-title {
+            font-family: $family-title;
+            font-size: 6rem;
+            color: $colors-secondary;
+            text-transform: uppercase;
+        }
+
+        .info__specs-list {
+            width: 100%;
+            padding: 3rem 0;
+            margin-bottom: 5rem;
+
+            color: $colors-secondary;
+            text-transform: uppercase;
+            font-weight: boldd;
+
+            border-top: 1px solid $colors-secondary;
+            border-bottom: 1px solid $colors-secondary;
+
+            @media (min-width: $media-lg) {
+                width: 565px;
+            }
+        }
+
+        .info__specs-item {
+            display: flex;
+            margin-bottom: 2rem;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        .info__specs-item-title {
+            width: 100px;
+            margin-right: 1rem;
+            @media (min-width: $media-lg) {
+                width: 190px;
+            }
+        }
+
+        .info__specs-item-text {
+        }
+    }
+    &__inner {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__title {
+        font-family: $family-title;
+        font-size: 6rem;
+        font-weight: $fw-normal;
     }
 }
