--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -127,6 +127,126 @@
         .info__specs-item-text {
         }
     }
+
+    &--buy {
+        .section__inner {
+            padding: 15rem 0;
+        }
+        .section__title {
+            color: $colors-additional;
+            margin-bottom: 5rem;
+        }
+
+        .section__content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            @media (min-width: $media-lg) {
+                flex-direction: row;
+                justify-content: space-between;
+            }
+        }
+
+        .buy__text-block {
+            position: relative;
+            min-width: auto;
+            order: 2;
+
+            @media (min-width: $media-lg) {
+                min-width: 484px;
+                order: 1;
+            }
+        }
+
+        .buy__text-block-list {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 5rem;
+
+            @media (min-width: $media-sm) {
+                max-width: 292px;
+            }
+        }
+
+        .buy__text-block-item {
+            display: flex;
+            flex-direction: column;
+
+            margin-bottom: 2.5rem;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            &:hover .buy__text-block-item-title {
+                color: $colors-additional;
+            }
+        }
+
+        .buy__text-block-item-title {
+            font-size: 1.8rem;
+            font-weight: $fw-bold;
+            margin-bottom: 0.5rem;
+
+            transition: color 0.3s linear;
+        }
+
+        .buy__text-block-price {
+            position: absolute;
+            right: 0;
+            bottom: 100%;
+            z-index: 1;
+
+            width: 100px;
+            height: 100px;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            background: url('../../img/buy/star.png') no-repeat center / cover;
+
+            transition: transform 0.3s ease-in-out;
+
+            &:hover {
+                transform: scale(1.25);
+            }
+
+            @media (min-width: $media-sm) {
+                width: 200px;
+                height: 200px;
+            }
+
+            @media (min-width: $media-lg) {
+                bottom: 130px;
+            }
+        }
+
+        .buy__text-block-price-value {
+            font-weight: $fw-bold;
+            font-size: 1.5rem;
+
+            white-space: nowrap;
+
+            @media (min-width: $media-sm) {
+                font-size: 3.5rem;
+            }
+        }
+
+        .buy__image {
+            display: block;
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+            order: 1;
+
+            @media (min-width: $media-lg) {
+                order: 2;
+            }
+        }
+    }
     &__inner {
         display: flex;
         flex-direction: column;
@@ -136,5 +256,6 @@
         font-family: $family-title;
         font-size: 6rem;
         font-weight: $fw-normal;
+        text-transform: uppercase;
     }
 }
