--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,2 +1,121 @@
 .footer {
+    background-color: $colors-primary;
+
+    &__inner {
+        padding: 8.8rem 0 8.2rem;
+
+        display: flex;
+        flex-direction: column;
+
+        color: $colors-secondary;
+    }
+
+    &__top {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        @media (min-width: $media-md) {
+            flex-direction: row;
+            justify-content: space-between;
+        }
+    }
+
+    &__form-section {
+        order: 2;
+        margin-bottom: 9.7rem;
+
+        .section__title {
+            text-align: center;
+            margin-bottom: 3.7rem;
+
+            @media (min-width: $media-md) {
+                text-align: left;
+            }
+        }
+
+        @media (min-width: $media-md) {
+            order: 1;
+        }
+    }
+
+    &__logo {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10rem;
+        order: 1;
+
+        svg {
+            width: 250px;
+            height: 60px;
+        }
+
+        svg path {
+            fill: $colors-secondary;
+        }
+
+        @media (min-width: $media-md) {
+            order: 2;
+
+            svg {
+                width: 370px;
+                height: 82px;
+            }
+        }
+    }
+
+    &__section-inst {
+        margin-bottom: 4.8rem;
+    }
+
+    &__section-inst-title {
+        font-weight: 700;
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        margin-bottom: 2.8rem;
+    }
+
+    &__section-inst-gallery {
+        display: grid;
+
+        grid-template-columns: 1fr;
+        gap: 3rem;
+
+        @media (min-width: $media-sm) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 2rem;
+        }
+        @media (min-width: $media-lg) {
+            grid-template-columns: repeat(4, 1fr);
+            gap: 5.2rem;
+        }
+    }
+
+    &__section-inst-gallery-image {
+        display: block;
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+    }
+
+    &__bottom-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 4rem 9rem;
+
+        @media (min-width: $media-sm) {
+            flex-direction: row;
+            align-items: stretch;
+        }
+    }
+
+    &__bottom-list-item {
+        text-transform: uppercase;
+        font-size: 1.8rem;
+        font-weight: 700;
+
+        white-space: nowrap;
+    }
 }
