--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -61,3 +61,4 @@ p {
 @import 'components/section.scss';
 @import 'components/btn.scss';
 @import 'components/burger.scss';
+@import 'components/form.scss';
