tech, gallery blocks

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,3 +62,4 @@ p {
 @import 'components/btn.scss';
 @import 'components/burger.scss';
 @import 'components/form.scss';
+@import 'components/gallery.scss';
