--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -22,7 +22,7 @@
 
         height: 456px;
 
-        background: url('../../img/intro/fit-tries.png') no-repeat center /
+        background: url('../../img/intro/fir-tries.png') no-repeat center /
             cover;
 
         transform: translateY(40%);
@@ -38,7 +38,7 @@
 
         height: 456px;
 
-        background: url('../../img/intro/fit-tries.png') no-repeat center /
+        background: url('../../img/intro/fir-tries.png') no-repeat center /
             cover;
 
         transform: translateY(75%) rotate(180deg);
