--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -130,7 +130,7 @@
 
     &--buy {
         .section__inner {
-            padding: 15rem 0;
+            padding-top: 15rem;
         }
         .section__title {
             color: $colors-additional;
@@ -142,9 +142,10 @@
             flex-direction: column;
             align-items: center;
 
-            @media (min-width: $media-lg) {
+            @media (min-width: $media-xl) {
                 flex-direction: row;
                 justify-content: space-between;
+                gap: 4rem;
             }
         }
 
@@ -153,7 +154,7 @@
             min-width: auto;
             order: 2;
 
-            @media (min-width: $media-lg) {
+            @media (min-width: $media-xl) {
                 min-width: 484px;
                 order: 1;
             }
@@ -219,7 +220,7 @@
                 height: 200px;
             }
 
-            @media (min-width: $media-lg) {
+            @media (min-width: $media-xl) {
                 bottom: 130px;
             }
         }
@@ -242,14 +243,66 @@
             height: auto;
             order: 1;
 
-            @media (min-width: $media-lg) {
+            @media (min-width: $media-xl) {
                 order: 2;
             }
         }
     }
+
+    &--tech {
+        .tech__list {
+            margin: 0;
+
+            font-size: 2rem;
+            font-weight: 700;
+            color: $colors-primary;
+        }
+
+        .tech__list-item {
+            padding-left: 24px;
+            margin-bottom: 15px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
+        .tech__top {
+            padding: 84px 0;
+
+            background: url('../../img/tech/tech-bg.jpg') no-repeat center /
+                cover;
+        }
+
+        .tech__inner {
+            position: relative;
+
+            min-height: 110vh;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+        }
+
+        .section__title {
+            max-width: 470px;
+            margin-bottom: 62px;
+        }
+
+        .tech__play-btn {
+            position: absolute;
+            right: 350px;
+            top: 50%;
+            z-index: 1;
+
+            transform: translateY(-50%);
+        }
+    }
+
     &__inner {
         display: flex;
         flex-direction: column;
+        justify-content: flex-end;
     }
 
     &__title {
