--- a/src/scss/components/gallery.scss
+++ b/src/scss/components/gallery.scss
@@ -28,10 +28,11 @@
         grid-template-columns: 2fr 1fr;
         grid-template-rows: auto;
 
-        gap: 30px 24px;
+        gap: 10px 8px;
 
         @media (min-width: $media-md) {
             padding: 72px 32px;
+            gap: 30px 24px;
 
             &::after {
                 content: '';
@@ -50,10 +51,11 @@
         }
     }
 
-    &__small-image {
-        object-fit: cover;
+    &__small-picture {
         width: 100%;
         align-self: stretch;
+
+        overflow: hidden;
 
         &--1 {
             grid-column: 1/3;
@@ -63,6 +65,15 @@
         &--2 {
             border-radius: 0 0 0 300px;
         }
+
+        &--3 {
+        }
+    }
+
+    &__small-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     &__big {
@@ -70,7 +81,11 @@
 
         grid-template-columns: 1fr 2fr 1fr;
         grid-template-rows: repeat(3, minmax(auto, 100%));
-        gap: 20px;
+        gap: 10px;
+
+        @media (min-width: $media-md) {
+            gap: 20px;
+        }
 
         @media (min-width: $media-xl) {
             grid-template-columns: 300px 469px 391px;
@@ -78,10 +93,11 @@
         }
     }
 
-    &__big-image {
-        object-fit: cover;
+    &__big-picture {
         width: 100%;
         align-self: stretch;
+
+        overflow: hidden;
 
         &--2 {
             justify-self: end;
@@ -107,9 +123,18 @@
         }
     }
 
+    &__big-image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
     &__big-text {
-        max-width: 300px;
-        max-height: 270px;
+        // max-width: 300px;
+        // max-height: 270px;
+        height: 100%;
+
+        align-self: stretch;
 
         padding: 0 20px;
         font-size: 1.5rem;
@@ -128,7 +153,7 @@
         border-radius: 0 0 0 200px;
 
         @media (min-width: $media-sm) {
-            font-size: 1rem;
+            font-size: 2rem;
         }
 
         @media (min-width: $media-lg) {
