--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,7 +4,7 @@
             <div class="footer__top">
                 <section class="footer__form-section">
                     <h2 class="section__title">Contact us</h2>
-                    <form action="/" class="form">
+                    <form action="/" class="form anim--fade-up">
                         <label for="form-input-name" class="form__label">
                             <input id="form-input-name" type="text" class="form__input" placeholder="Name">
                         </label>
