--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,3 +63,4 @@ p {
 @import 'components/burger.scss';
 @import 'components/form.scss';
 @import 'components/gallery.scss';
+@import 'components/anim.scss';
