--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="container">
-        <div class="header__inner">
+        <div class="header__inner anim--fade-up">
 
             <input type="checkbox" class="burger__checkbox">
             <button class="burger">
