--- a/src/scss/components/gallery.scss
+++ b/src/scss/components/gallery.scss
@@ -130,8 +130,7 @@
     }
 
     &__big-text {
-        // max-width: 300px;
-        // max-height: 270px;
+        width: 100%;
         height: 100%;
 
         align-self: stretch;
