--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -88,6 +88,8 @@
             justify-content: flex-start;
             gap: 162px;
 
+            overflow-x: hidden;
+
             @media (min-width: $media-lg) {
                 flex-direction: row;
             }
@@ -107,7 +109,7 @@
 
             color: $colors-secondary;
             text-transform: uppercase;
-            font-weight: boldd;
+            font-weight: $fw-bold;
 
             border-top: 1px solid $colors-secondary;
             border-bottom: 1px solid $colors-secondary;
@@ -150,6 +152,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            overflow-x: hidden;
 
             @media (min-width: $media-xl) {
                 flex-direction: row;
