--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -40,8 +40,8 @@
     }
 
     &__logo {
-        display: flex;
-        justify-content: center;
+        text-align: center;
+        height: fit-content;
         margin-bottom: 10rem;
         order: 1;
 
