--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,14 @@ a {
     color: inherit;
 }
 
+a:focus,
+button:focus,
+input:focus,
+textarea:focus {
+    outline: 3px solid $colors-highlight;
+    outline-offset: 3px;
+}
+
 h1,
 h2,
 h3,
