refactoring, img alts

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -6,10 +6,10 @@
                     <h2 class="section__title">Contact us</h2>
                     <form action="/" class="form anim--fade-up">
                         <label for="form-input-name" class="form__label">
-                            <input id="form-input-name" type="text" class="form__input" placeholder="Name">
+                            <input id="form-input-name" type="text" class="form__input" placeholder="Name" required>
                         </label>
                         <label for="form-input-name" class="form__label">
-                            <input id="form-input-email" type="email" class="form__input" placeholder="E-mail">
+                            <input id="form-input-email" type="email" class="form__input" placeholder="E-mail" required>
                         </label>
 
                         <button type="submit" class="btn btn--submit form__btn">Send</button>
@@ -28,13 +28,13 @@
                 <h6 class="footer__section-inst-title">Instagram</h6>
                 <div class="footer__section-inst-gallery">
                     <img src="img/footer/inst/1.jpg" class="footer__section-inst-gallery-image"
-                        alt="unpacking supboards">
+                        alt="couple unpacking supboards near a mountain lake">
                     <img src="img/footer/inst/2.jpg" class="footer__section-inst-gallery-image"
-                        alt="prepare supboards to ride ">
+                        alt="prepare supboards to ride on the shore of a mountain lake">
                     <img src="img/footer/inst/3.jpg" class="footer__section-inst-gallery-image"
-                        alt="man ridding supboard">
+                        alt="man ridding supboard on a mountain lake">
                     <img src="img/footer/inst/4.jpg" class="footer__section-inst-gallery-image"
-                        alt="couple ridding supboards">
+                        alt="couple ridding supboards on a mountain lake">
                 </div>
             </section>
 
