--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,7 +5,7 @@
     right: 0;
     z-index: 20;
 
-    @media (min-width: $media-lg) {
+    @media (min-width: $media-md) {
         top: 57px;
     }
     &__inner {
